GET method changed - works now v1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <%- include('./partials/head') %>
   </head>
   <body>
+    <h1>Home</h1>
     <div id="reader"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"></script>
     <script type="module" src="/js/main.js"></script>
