--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,9 +18,9 @@
 }
 
 body {
-  background-color: var(--color-black);
+  /* background-color: var(--color-black); */
   font-family: 'Inter', sans-serif;
-  color: var(--color-white);
+  color: var(--color-black);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
