added index and scanner page styles and .env file

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,9 +18,9 @@
 }
 
 body {
-  /* background-color: var(--color-black); */
+  background-color: var(--color-black);
   font-family: 'Inter', sans-serif;
-  color: var(--color-black);
+  color: var(--color-white);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
