--- a/views/scanner.ejs
+++ b/views/scanner.ejs
@@ -15,8 +15,7 @@
             stroke="#7b7b7b"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+            stroke-linejoin="round" />
         </svg>
         <p class="is--text-grey">Diary</p>
       </a>
@@ -27,8 +26,7 @@
             stroke="#7b7b7b"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+            stroke-linejoin="round" />
         </svg>
         <p class="is--text-grey">Me</p>
       </a>
