--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <title>Document</title>
+    <%- include('./partials/head') %>
   </head>
   <body>
     <h1>Account</h1>
@@ -17,8 +13,7 @@
             stroke="#7b7b7b"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+            stroke-linejoin="round" />
         </svg>
         <p class="is--text-grey">Diary</p>
       </a>
@@ -29,8 +24,7 @@
             stroke="#75B06D"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+            stroke-linejoin="round" />
         </svg>
         <p class="is--text-green">Me</p>
       </a>
