--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,11 +6,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="apple-mobile-web-app-title" content="YummieSpot" />
-  <link
-    rel="icon"
-    type="image/x-icon"
-    href="../../public/icon/icon-192x192.png" />
+  <link rel="icon" type="image/x-icon" href="/icon/icon-192x192.png" />
   <link rel="stylesheet" href="/css/main.css" />
-  <link rel="manifest" href="../../manifest.webmanifest" />
+  <link rel="manifest" href="/manifest.webmanifest" />
   <title>Barcode Scanner</title>
 </head>
