--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,8 +6,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="apple-mobile-web-app-title" content="YummieSpot" />
-  <link rel="icon" type="image/x-icon" href="/icon/icon-192x192.png" />
+  <meta name="theme-color" content="#f69435" />
+  <link rel="icon" type="apple-touch-icon" href="/icon/icon-192x192.png" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="manifest" href="/manifest.json" />
   <title>Barcode Scanner</title>
+  <script src="/js/main.js"></script>
 </head>
