added cache service worker

--- a/views/scanner.ejs
+++ b/views/scanner.ejs
@@ -32,6 +32,8 @@
       </a>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"></script>
-    <script type="module" src="/js/scanner.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/scanner.js"></script>
+    sc
   </body>
 </html>
