--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-title" content="YummieSpot" />
   <meta name="theme-color" content="#f69435" />
   <link rel="apple-touch-icon" href="/icon/icon-192x192.png" />
+  <link rel="icon" type="image/x-icon" href="/icon/icon-192x192.png" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="manifest" href="/manifest.json" />
   <title>Barcode Scanner</title>
