--- a/views/scanner.ejs
+++ b/views/scanner.ejs
@@ -15,7 +15,8 @@
             stroke="#7b7b7b"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round" />
+            stroke-linejoin="round"
+          />
         </svg>
         <p class="is--text-grey">Diary</p>
       </a>
@@ -26,7 +27,8 @@
             stroke="#7b7b7b"
             stroke-width="2"
             stroke-linecap="round"
-            stroke-linejoin="round" />
+            stroke-linejoin="round"
+          />
         </svg>
         <p class="is--text-grey">Me</p>
       </a>
@@ -34,6 +36,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/scanner.js"></script>
-    sc
   </body>
 </html>
