changed the result/save function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         </svg>
       </a>
       <header>
-        <h1>Hello First</h1>
+        <h1>Hello <%= userSettings.name %></h1>
         <div class="progress-stats__wrapper">
           <p>
             You can still eat
@@ -132,7 +132,7 @@
         </ul>
       </main>
       <footer>
-        <a href="./">
+        <a href="/">
           <svg
             viewBox="0 0 18 20"
             fill="none"
@@ -148,7 +148,7 @@
           </svg>
           <p class="is--text-green">Diary</p>
         </a>
-        <a href="./account">
+        <a href="/account">
           <svg
             viewBox="0 0 20 20"
             fill="none"
