--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@
           <% items.forEach(item => { %>
           <li>
             <div class="item-img__wrapper">
-              <img src="<%= item.imgUrl %>" />
+              <img alt="product-image" src="<%= item.imgUrl %>" />
             </div>
             <div class="item-info__wrapper">
               <p><%= item.name %> - <%= item.quantity %></p>
