--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,7 @@
   <meta name="description" content="Yummiespot | Barcode Scanner" />
   <link rel="apple-touch-icon" href="/icon/icon-192x192.png" />
   <link rel="icon" type="image/x-icon" href="/icon/icon-192x192.png" />
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/main.min.css" />
   <link rel="manifest" href="/manifest.json" />
   <title>Barcode Scanner</title>
 </head>
