--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
     </head>
   </head>
   <body>
-    <div class="container">
+    <div id="loader">Its loading</div>
+    <div id="content" class="container" style="display: none">
       <a href="./scanner" class="barcode__btn">
         <svg
           width="20"
@@ -166,6 +167,6 @@
         </a>
       </footer>
     </div>
-    <script src="/js/main.js"></script>
+    <script defer src="/js/main.min.js"></script>
   </body>
 </html>
