--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -79,6 +79,6 @@
         </a>
       </footer>
     </div>
-    <script src="/js/main.js"></script>
+    <script defer src="/js/main.min.js"></script>
   </body>
 </html>
