--- a/views/product.ejs
+++ b/views/product.ejs
@@ -80,6 +80,6 @@
         </a>
       </footer>
     </div>
-    <script src="/js/main.js"></script>
+    <scrip defer src="/js/main.min.js"></scrip>
   </body>
 </html>
