--- a/views/scanner.ejs
+++ b/views/scanner.ejs
@@ -4,7 +4,7 @@
     <%- include('./partials/head') %>
   </head>
   <body>
-    <main>
+    <main id="content">
       <div id="reader"></div>
     </main>
     <footer>
@@ -33,8 +33,11 @@
         <p class="is--text-grey">Me</p>
       </a>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/scanner.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
+    ></script>
+    <script defer src="/js/main.min.js"></script>
+    <script defer src="/js/scanner.min.js"></script>
   </body>
 </html>
