updated read.me and added lazy loading

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div class="result__header">
-        <img src="<%= product.imgUrl %>" alt="" />
+        <img loading="lazy" src="<%= product.imgUrl %>" alt="" />
         <h1><%= product.name %> - <%= product.quantity %></h1>
         <label><%= product.brands %></label>
         <div class="result__core-nutri__wrapper">
