--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,11 @@
           <% items.forEach(item => { %>
           <li>
             <div class="item-img__wrapper">
-              <img alt="product-image" src="<%= item.imgUrl %>" />
+              <img
+                alt="product-image"
+                loading="lazy"
+                src="<%= item.imgUrl %>"
+              />
             </div>
             <div class="item-info__wrapper">
               <p><%= item.name %> - <%= item.quantity %></p>
